# -*- bazel -*-

load("@drake//tools/install:install.bzl", "install")
load("@drake//tools/skylark:cc.bzl", "cc_library")

licenses(["notice"])  # Apache-2.0

package(default_visibility = ["//visibility:public"])

# Filament is a PBR rendering engine that uses CMake. This BUILD file builds
# Filament from source using genrule to invoke CMake, then creates cc_library
# targets that link against the built static libraries.

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
)

config_setting(
    name = "osx",
    constraint_values = ["@platforms//os:osx"],
)

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

# Build Filament libraries using CMake
# Note: This genrule invokes CMake to build Filament from source.
# The build can take several minutes on first execution.
genrule(
    name = "build_filament",
    srcs = glob(
        ["**/*"],
        exclude = [
            "bazel-*/**",
            ".git/**",
            "*.md",
        ],
    ),
    outs = [
        "lib/libfilament.a",
        "lib/libbackend.a",
        "lib/libfilabridge.a",
        "lib/libfilaflat.a",
        "lib/libutils.a",
        "lib/libmath.a",
        "lib/libsmol-v.a",
        "lib/libibl-lite.a",
        "lib/libgeometry.a",
        "lib/libimage.a",
        "lib/libgltfio_core.a",
        "lib/libviewer.a",
        "lib/libdracodec.a",
        "lib/libmeshoptimizer.a",
        "lib/libz.a",
        "lib/libstb.a",
        "lib/libbluegl.a",
        "lib/libmikktspace.a",
        "lib/libzstd.a",
    ],
    cmd = """
        set -euxo pipefail
        
        # Save original working directory for output paths
        ORIGINAL_DIR=$$(pwd)
        
        # Get source root from CMakeLists.txt location
        REPO_ROOT=$$(dirname $(location CMakeLists.txt))
        BUILD_DIR=$$(mktemp -d)
        
        echo "Original directory: $$ORIGINAL_DIR"
        echo "Building Filament from: $$REPO_ROOT"
        echo "Build directory: $$BUILD_DIR"
        
        # Filament requires clang - set explicitly
        export CC=clang
        export CXX=clang++
        
        # Configure with CMake using Unix Makefiles
        cd "$$REPO_ROOT"
        cmake \
            -G "Unix Makefiles" \
            -DCMAKE_BUILD_TYPE=Release \
            -DCMAKE_POSITION_INDEPENDENT_CODE=ON \
            -DCMAKE_CXX_STANDARD=20 \
            -DFILAMENT_SUPPORTS_OPENGL=ON \
            -DFILAMENT_SUPPORTS_METAL=OFF \
            -DFILAMENT_SUPPORTS_VULKAN=OFF \
            -DFILAMENT_SKIP_SAMPLES=ON \
            -DFILAMENT_BUILD_FILAMAT=OFF \
            -B "$$BUILD_DIR" \
            -S .
        
        # Build required targets using make
        make -C "$$BUILD_DIR" \
            filament backend filabridge filaflat utils math smol-v ibl-lite geometry image gltfio_core viewer \
            -j$$(nproc)
        
        echo "Build completed. Copying libraries..."
        
        # Return to original directory for correct output paths
        cd "$$ORIGINAL_DIR"
        
        # List what was actually built
        echo "Contents of BUILD_DIR:"
        find "$$BUILD_DIR" -name "*.a" -type f
        
        # Copy built libraries to Bazel output locations
        echo "Copying libfilament.a..."
        cp -v "$$BUILD_DIR/filament/libfilament.a" "$(location lib/libfilament.a)"
        
        echo "Copying libbackend.a..."
        cp -v "$$BUILD_DIR/filament/backend/libbackend.a" "$(location lib/libbackend.a)"
        
        echo "Copying libfilabridge.a..."
        cp -v "$$BUILD_DIR/libs/filabridge/libfilabridge.a" "$(location lib/libfilabridge.a)"
        
        echo "Copying libfilaflat.a..."
        cp -v "$$BUILD_DIR/libs/filaflat/libfilaflat.a" "$(location lib/libfilaflat.a)"
        
        echo "Copying libutils.a..."
        cp -v "$$BUILD_DIR/libs/utils/libutils.a" "$(location lib/libutils.a)"
        
        echo "Copying libmath.a..."
        cp -v "$$BUILD_DIR/libs/math/libmath.a" "$(location lib/libmath.a)"
        
        echo "Copying libsmol-v.a..."
        cp -v "$$BUILD_DIR/third_party/smol-v/tnt/libsmol-v.a" "$(location lib/libsmol-v.a)"
        
        echo "Copying libibl-lite.a..."
        cp -v "$$BUILD_DIR/libs/ibl/libibl-lite.a" "$(location lib/libibl-lite.a)"
        
        echo "Copying libgeometry.a..."
        cp -v "$$BUILD_DIR/libs/geometry/libgeometry.a" "$(location lib/libgeometry.a)"
        
        echo "Copying libimage.a..."
        cp -v "$$BUILD_DIR/libs/image/libimage.a" "$(location lib/libimage.a)"
        
        echo "Copying libgltfio_core.a..."
        cp -v "$$BUILD_DIR/libs/gltfio/libgltfio_core.a" "$(location lib/libgltfio_core.a)"
        
        echo "Copying libviewer.a..."
        cp -v "$$BUILD_DIR/libs/viewer/libviewer.a" "$(location lib/libviewer.a)"
        
        echo "Copying libdracodec.a..."
        cp -v "$$BUILD_DIR/third_party/draco/tnt/libdracodec.a" "$(location lib/libdracodec.a)"
        
        echo "Copying libmeshoptimizer.a..."
        cp -v "$$BUILD_DIR/third_party/meshoptimizer/tnt/libmeshoptimizer.a" "$(location lib/libmeshoptimizer.a)"
        
        echo "Copying libz.a..."
        cp -v "$$BUILD_DIR/third_party/libz/tnt/libz.a" "$(location lib/libz.a)"
        
        echo "Copying libstb.a..."
        cp -v "$$BUILD_DIR/third_party/stb/tnt/libstb.a" "$(location lib/libstb.a)"
        
        echo "Copying libbluegl.a..."
        cp -v "$$BUILD_DIR/libs/bluegl/libbluegl.a" "$(location lib/libbluegl.a)"
        
        echo "Copying libmikktspace.a..."
        cp -v "$$BUILD_DIR/third_party/mikktspace/libmikktspace.a" "$(location lib/libmikktspace.a)"
        
        echo "Copying libzstd.a..."
        cp -v "$$BUILD_DIR/third_party/zstd/tnt/libzstd.a" "$(location lib/libzstd.a)"
        
        echo "Successfully built and copied all Filament libraries"
    """,
    local = True,  # Run on host system with access to cmake and ninja
    tags = ["manual"],  # Don't build unless explicitly requested or needed
    visibility = ["//visibility:private"],
)

# Math library
cc_library(
    name = "math",
    hdrs = glob(["libs/math/include/**/*.h"]),
    includes = ["libs/math/include"],
    srcs = ["lib/libmath.a"],
    linkopts = select({
        ":linux": ["-lm", "-lpthread"],
        ":osx": ["-lm", "-lpthread"],
        "//conditions:default": [],
    }),
    linkstatic = True,
)

# Utils library
cc_library(
    name = "utils",
    hdrs = glob([
        "libs/utils/include/**/*.h",
        "third_party/robin-map/include/**/*.h",
    ]),
    includes = [
        "libs/utils/include",
        "third_party/robin-map/include",
    ],
    srcs = ["lib/libutils.a"],
    deps = [":math"],
    linkopts = select({
        ":linux": ["-ldl", "-lpthread"],
        ":osx": ["-ldl", "-lpthread"],
        "//conditions:default": [],
    }),
    linkstatic = True,
)

# Filabridge library
cc_library(
    name = "filabridge",
    hdrs = glob(["libs/filabridge/include/**/*.h"]),
    includes = ["libs/filabridge/include"],
    srcs = ["lib/libfilabridge.a"],
    deps = [
        ":math",
        ":utils",
    ],
    linkstatic = True,
)

# Filaflat library
cc_library(
    name = "filaflat",
    hdrs = glob(["libs/filaflat/include/**/*.h"]),
    includes = ["libs/filaflat/include"],
    srcs = [
        "lib/libfilaflat.a",
        "lib/libsmol-v.a",
    ],
    deps = [
        ":filabridge",
        ":utils",
    ],
    linkstatic = True,
)

# BlueGL library (OpenGL loader)
cc_library(
    name = "bluegl",
    srcs = ["lib/libbluegl.a"],
    linkstatic = True,
)

# Backend library
cc_library(
    name = "backend",
    hdrs = glob(["filament/backend/include/**/*.h"]),
    includes = ["filament/backend/include"],
    srcs = ["lib/libbackend.a"],
    deps = [
        ":math",
        ":utils",
        ":bluegl",
    ],
    linkopts = select({
        ":linux": ["-lGL", "-lEGL"],
        ":osx": [
            "-framework OpenGL",
            "-framework Cocoa",
            "-framework QuartzCore",
        ],
        "//conditions:default": [],
    }),
    linkstatic = True,
)

# Main Filament library
cc_library(
    name = "filament",
    hdrs = glob(["filament/include/**/*.h"]),
    includes = ["filament/include"],
    srcs = [
        "lib/libfilament.a",
        "lib/libibl-lite.a",
    ],
    deps = [
        ":backend",
        ":filabridge",
        ":filaflat",
        ":math",
        ":utils",
        ":zstd",
    ],
    linkstatic = True,
)

# Geometry utilities library
cc_library(
    name = "geometry",
    hdrs = glob(["libs/geometry/include/**/*.h"]),
    includes = ["libs/geometry/include"],
    srcs = ["lib/libgeometry.a"],
    deps = [
        ":filament",
        ":math",
        ":mikktspace",
    ],
    linkstatic = True,
)

# Image utilities library
cc_library(
    name = "image",
    hdrs = glob(["libs/image/include/**/*.h"]),
    includes = ["libs/image/include"],
    srcs = ["lib/libimage.a"],
    deps = [":filament"],
    linkstatic = True,
)

# Third-party dependencies
cc_library(
    name = "draco",
    srcs = ["lib/libdracodec.a"],
    linkstatic = True,
)

cc_library(
    name = "meshoptimizer",
    srcs = ["lib/libmeshoptimizer.a"],
    linkstatic = True,
)

cc_library(
    name = "zlib",
    srcs = ["lib/libz.a"],
    linkstatic = True,
)

cc_library(
    name = "stb",
    srcs = ["lib/libstb.a"],
    linkstatic = True,
)

cc_library(
    name = "mikktspace",
    srcs = ["lib/libmikktspace.a"],
    linkstatic = True,
)

cc_library(
    name = "zstd",
    srcs = ["lib/libzstd.a"],
    linkstatic = True,
)

# GLTF I/O library
cc_library(
    name = "gltfio",
    hdrs = glob(["libs/gltfio/include/**/*.h"]),
    includes = ["libs/gltfio/include"],
    srcs = ["lib/libgltfio_core.a"],
    deps = [
        ":filament",
        ":geometry",
        ":image",
        ":math",
        ":utils",
        ":draco",
        ":meshoptimizer",
        ":zlib",
        ":stb",
    ],
    linkstatic = True,
)

# Viewer library
cc_library(
    name = "viewer",
    hdrs = glob(["libs/viewer/include/**/*.h"]),
    includes = ["libs/viewer/include"],
    srcs = ["lib/libviewer.a"],
    deps = [
        ":filament",
        ":gltfio",
        ":image",
    ],
    linkstatic = True,
)

# Convenience target with headers only (for when you just need to compile against the API)
cc_library(
    name = "filament_headers",
    hdrs = glob([
        "filament/include/**/*.h",
        "filament/backend/include/**/*.h",
    ]),
    includes = [
        "filament/include",
        "filament/backend/include",
    ],
    deps = [
        ":math",
        ":utils",
    ],
)

# Install the license file
install(
    name = "install",
    docs = ["LICENSE"],
)

exports_files(["drake_repository_metadata.json"])
