# -*- bazel -*-

load(
    "@drake//tools/install:install.bzl",
    "install",
)

licenses(["notice"])  # MIT

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "stb",
    # Note the stb repo has a wide collection of header-only functionality.
    # We'll be parsimonious in which headers we bring in based on a proven
    # need.
    hdrs = ["stb_image.h"],
    includes = ["."],
    linkstatic = 1,
)

install(
    name = "install",
    docs = ["LICENSE"],
)
