# -*- bazel -*-

load(
    "@drake//tools/install:install.bzl",
    "install",
)

licenses(["notice"])  # MIT

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "tinygltf",
    srcs = ["tiny_gltf.cc"],
    hdrs = ["tiny_gltf.h"],
    defines = [
        # TODO: I'm not sure what happens if we disable images.
        "TINYGLTF_NO_STB_IMAGE_WRITE"
    ],
    includes = ["."],
    linkstatic = 1,
    deps = [
        "@nlohmann_internal//:nlohmann",
        "@stb_internal//:stb",
    ]
)

install(
    name = "install",
    docs = ["LICENSE"],
)
