# -*- bazel -*-

load(
    "@drake//tools/install:install.bzl",
    "install",
)

licenses(["notice"])  # MIT

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "tinygltf",
    srcs = ["tiny_gltf.cc"],
    hdrs = ["tiny_gltf.h"],
    defines = [
        # Don't bother reading external images during glTF parsing; we'll handle
        # while processing the resulting RenderMaterial.
        "TINYGLTF_NO_EXTERNAL_IMAGE",
        # TODO: Eliminate the stb requirement by passing the encoded bits into
        # RenderTexture and decode in TextureLibrary.
        "TINYGLTF_NO_STB_IMAGE",
        "TINYGLTF_NO_STB_IMAGE_WRITE",

    ],
    includes = ["."],
    linkstatic = 1,
    deps = [
        "@nlohmann_internal//:nlohmann",
        # "@stb_internal//:stb",
    ]
)

install(
    name = "install",
    docs = ["LICENSE"],
)
