# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_package_library(
    name = "gl",
    deps = [
        ":opengl_context",
        ":render_engine_gl",
        ":shader_program",
    ],
)

drake_cc_library(
    name = "opengl_context",
    srcs = ["opengl_context.cc"],
    hdrs = [
        "opengl_context.h",
        "opengl_includes.h",
    ],
    linkopts = [
        "-lGL",
        "-lX11",
    ],
)

drake_cc_library(
    name = "render_engine_gl",
    srcs = ["render_engine_gl.cc"],
    hdrs = [
        "buffer_dim.h",
        "opengl_geometry.h",
        "render_engine_gl.h",
    ],
    deps = [
        ":opengl_context",
        ":shader_program",
        "//common:essential",
        "//common:profiler",
        "//geometry/dev/render:render_engine",
        "//math:geometric_transform",
        "//systems/sensors:image",
        "@fmt",
        "@tinyobjloader",
    ],
)

drake_cc_library(
    name = "shader_program",
    srcs = ["shader_program.cc"],
    hdrs = ["shader_program.h"],
    deps = [
        ":opengl_context",
        "//common:essential",
    ],
)

drake_cc_googletest(
    name = "render_engine_gl_test",
    data = [
        "//systems/sensors:test_models",
    ],
    deps = [
        ":render_engine_gl",
        "//common:find_resource",
        "//geometry/dev/render:render_label",
        "//systems/sensors:color_palette",
    ],
)

add_lint_tests()
